<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6e3ce"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shinnosuke_net.net.MainActivity" >

    <TextView
        android:id="@+id/userID"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/app_title"
        android:textColor="#ff8000"
        android:textSize="50sp" />

    <Button
        android:id="@+id/oneChat"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:background="#fe9a2e"
        android:text="@string/one_chat"
        android:textColor="#ffffff"
        android:textSize="24dp" />

    <Button
        android:id="@+id/grepChat"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:background="#fe9a2e"
        android:text="@string/grep_chat"
        android:textColor="#ffffff"
        android:textSize="24dp" />

    <Button
        android:id="@+id/config"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:background="#fe9a2e"
        android:text="@string/config"
        android:textColor="#ffffff"
        android:textSize="24dp" />

    <Button
        android:id="@+id/appEnd"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:background="#fe9a2e"
        android:text="@string/app_close"
        android:textColor="#ffffff"
        android:textSize="24dp" />

</LinearLayout>