<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6e3ce"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shinnosuke_net.net.ConfigActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="5" >

        <TextView
            android:id="@+id/userID"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="@string/config1" />

        <EditText
            android:id="@+id/user_id"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="5" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="@string/config2" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:ems="10" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="5" >
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="@string/config3" />

        <EditText
            android:id="@+id/sex"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:ems="10" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="5" >
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="@string/config4" />

        <EditText
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:ems="10" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="5" >
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="@string/config5" />

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="14"
            android:ems="10" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="5" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="15"
            android:text="@string/config6" />
        
    </LinearLayout>

    <ListView
        android:id="@+id/tagListView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3" >

    </ListView>

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="#fe9a2e"
        android:onClick="chengeUserProfile"
        android:text="@string/changed_config_button" />

</LinearLayout>
